# RNNs-learn-robust-policies

./: .cursorignore  discussion.md  formal-brainstorming.md  makefile  methods.md  network-results-brainstorming.md  pyproject.toml  results-1.md  results-2.md  results-training-methods-part2.md  results.md
.cursor/rules/: basic.mdc  entrypoints.mdc  jax.mdc  python.mdc
0-training/: 1_fixed-policy.py  1_fixed-policy.qmd  2_context-policy.py  2_context-policy.qmd  train.py
1-analysis/: 1-1_plant-perts.qmd  1-2_feedback-perts.qmd  1-3_freq-response.qmd  2-1_plant-perts.qmd  2-2_feedback-perts.qmd  2-4_fps-steady-state.qmd  2-5_fps-reaching.qmd
config/: 1.yml  2.yml  _defaults.yml  paths.example.yml
manuscript/: abstract.md
scripts/: check_db.py  plotly_viewer.py  qmd_to_py.py  run_analysis.py  train.py  train_all.py
src/rlrmp/: plot_utils.py
src/rnns_learn_robust_motor_policies/: __init__.py  _debug.py  colors.py  config.py  constants.py  database.py  fp_finder.py  fps.py  hyperparams.py  measures.py  misc.py  part1_post_training.py  part1_setup.py  part2_setup.py  perturbations.py  plot.py  plot_utils.py  post_training.py  render_db.py  setup_utils.py  state_utils.py  train.py  train_setup.py  train_setup_part1.py  train_setup_part2.py  tree_utils.py  types.py
src/rnns_learn_robust_motor_policies/analysis/: __init__.py  _dependencies.py  _template.py  activity.py  aligned.py  analysis.py  center_out.py  disturbance.py  effector.py  execution.py  fp_finder.py  fps.py  fps_tmp.py  fps_tmp2.py  measures.py  network.py  pca.py  profiles.py  regression.py  state_utils.py  tangling.py
src/rnns_learn_robust_motor_policies/analysis/modules/: _template.py
src/rnns_learn_robust_motor_policies/analysis/modules/part1/: feedback_perts.py  freq_response.py  plant_perts.py  unit_prefs.py
src/rnns_learn_robust_motor_policies/analysis/modules/part2/: context_pert.py  feedback_perts.py  fps_reach.py  fps_steady.py  plant_perts.py  sisu_pert.py  tangling.py  unit_perts.old.py  unit_perts.py
src/rnns_learn_robust_motor_policies/analysis/part1/: __init__.py  feedback_perts.py  freq_response.py  plant_perts.py
src/rnns_learn_robust_motor_policies/analysis/part2/: __init__.py  context_pert.py  plant_perts.py  unit_perts.py
src/rnns_learn_robust_motor_policies/config/: 1-1.yml  1-2.yml  1-3.yml  1.yml  2-1.yml  2-6.yml  2-7.yml  2.yml  __init__.py  _defaults.yml  config.py  paths.yml  train_all.yml
src/rnns_learn_robust_motor_policies/config/analysis/: 1-1.yml  1-2.yml  1-3.yml  1-4.yml  2-1.yml  2-2.yml  2-4.yml  2-5.yml  2-6.yml  2-7.yml
src/rnns_learn_robust_motor_policies/config/analysis/part2/: context_pert.yml  feedback_perts.yml  fps_reach.yml  fps_steady.yml  plant_perts.yml  tangling.yml  unit_perts.yml
src/rnns_learn_robust_motor_policies/config/training/: 1.yml  2.yml  all.yml  part1.yml  part2.yml
src/rnns_learn_robust_motor_policies/training/: __init__.py  loss.py  part1_fixed.py  part2_context.py  post_training.py  train.py
src/rnns_learn_robust_motor_policies/training/modules/: part1.py  part2.py
tests/: test_analysis_vmap.py  test_tangling_braid.py
