[project]
name = "rnns-learn-robust-motor-policies"
version = "0.1"
description = ""
# url = ""
authors = [
    {name = "Matthew Leo", email = "mail@matthewleo.net"}
]
# license = {file = "LICENSE"}
# readme = "README.md"
keywords = [
    'jax',
    'neural-networks',
    'optimal-control',
    'optimal-feedback-control',
    'motor-control',
]
requires-python = ">=3.11"
classifiers = [
    # "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "feedbax", 
    "plotly", 
    "polars", 
    "rich",
    # Necessary for converting notebooks
    "jupytext",
    # JAX complains if this isn't installed:
    # "cuda-cupti",
    # tqdm-related:
    "tqdm",
    "ipywidgets",
    "jupyter",
]

# [tool.setuptools.package-data]
# rnns_learn_robust_motor_policies = ["config/*.yml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["src/rnns_learn_robust_motor_policies"]

[tool.hatch.build.targets.wheel]
packages = ["src/rnns_learn_robust_motor_policies"]
