[project]
name = "rnns-learn-robust-motor-policies"
version = "0.1.0"
description = ""
authors = [
    {name = "Matthew Leo", email = "admin@matthewleo.net"}
]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.1",
    "diffrax>=0.7.0",
    # "jax_cookbook>=0.1.0",  # Installed from local with `uv pip install` until release
     # TODO: Update feedbax version on release
    "feedbax>=0.1.2", 
    "ipyfilechooser>=0.6.0",
    "ipywidgets>=8.1.5",
    "jax>=0.5.2",
    "kaleido==0.2.1",
    "plotly>=6.0.0",
    "polars>=1.24.0",
    "pyperclip>=1.9.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
]
keywords = [
    'jax',
    'neural-networks',
    'optimal-control',
    'optimal-feedback-control',
    'motor-control',
]
classifiers = [
    # "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
plotlyviewer = [
    "pyqt5>=5.15.11",
    "pyqtwebengine>=5.15.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["src/rnns_learn_robust_motor_policies"]

[tool.hatch.build.targets.wheel]
packages = ["src/rnns_learn_robust_motor_policies"]

[tool.uv]
config-settings = { editable-mode = "compat" }

[tool.uv.sources.feedbax]
path = "../20 Feedbax/feedbax"
editable = true
